<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="?android:attr/windowBackground"
        android:padding="16dp">

    <!-- Аватар користувача -->
    <ImageView
        android:id="@+id/profile_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/default_avatar"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_background"
        android:clipToOutline="true"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Ім'я користувача -->
    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/profile_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Електронна пошта -->
    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email_example"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        app:cornerRadius="32dp"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorSecondary"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/profile_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorOnSecondary"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@drawable/light_rounded_corners"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/settings"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/settings"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_page_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@drawable/light_rounded_corners"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/help"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/help_support"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@drawable/light_rounded_corners">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/logout"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/logout"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>